# web_10

./: pyproject.toml
hw_project/: .env  db.sqlite3
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: forms.py  models.py  urls.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_info.html  base.html  index.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: urls.py  views.py
hw_project/users/templates/users/: logout.html  signin.html  signup.html
hw_project/utils/: add_quotes_to_mongo.py  migration.py  quotes.json
